[workspace]
resolver = "2"
members = ["crates/api", "crates/shared", "crates/worker"]

[workspace.dependencies]
axum = "0.8.9"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
stylua = { version = "2.5.2", features = ["luau"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.7.0", features = ["limit", "timeout", "catch-panic", "cors"] }
redis = { version = "1.0.4", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
shared = { path = "crates/shared" }
